fixing some styles but still can't get spacing quite right

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -58,15 +58,16 @@
   display: inline-block;
   width: 100px;
   height: 35px;
+  font-size: 15px;
   text-align: center;
-  margin: 0px 0px 5px 5px;
+  margin: 10px 5px 10px 5px;
   background-color: white;
   color: black;
   border: 2px solid black; /* Green */
   text-decoration: none;
   cursor: pointer;
-  -webkit-transition-duration: 0.4s; /* Safari */
-  transition-duration: 0.4s;
+  /* -webkit-transition-duration: 0.4s;  Safari */
+  /* transition-duration: 0.4s; */
 }
 
 .save-button:hover {opacity: 1}
@@ -118,6 +119,18 @@ a, a:link, a:visited, a:focus, a:hover, a:active{
   user-select: none;          /* Likely future */
 }
 
+input[type="submit"] {
+  text-align: center;
+  display: block;
+  margin: 0 auto;
+}
+
+input[type="radio"] {
+  text-align: left;
+  margin: 0 auto;
+}
+
+
 .footer {
   position: fixed;
   left: 0;
@@ -126,10 +139,6 @@ a, a:link, a:visited, a:focus, a:hover, a:active{
   background-color: white;
   color: black;
   text-align: center;
-}
-
-input {
- 
 }
 
 ul {
